--- a/breakout.vcxproj
+++ b/breakout.vcxproj
@@ -156,6 +156,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ball.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Rectangle.h" />
+    <ClInclude Include="World.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
