Moved functions out of headers

--- a/breakout.vcxproj
+++ b/breakout.vcxproj
@@ -154,6 +154,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ball.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Word.cpp" />
   </ItemGroup>
